fix(build): restore Minecraft 26.1.2 compilation
- migrate renamed and relocated Minecraft 26.1.2 types using local game sources
- preserve potion, book, container, and vehicle behavior across API changes
- add the JUnit Platform launcher to subproject test runtime classpaths
- wire generated message keys into the sources JAR task graph